--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,11 @@
-/*#body {
-   min-height: 400px;
-   margin-bottom: 100px;
-   clear: both;
-}*/
-
-.left-align{
-    text-align: left;
+.content-section {
+  margin-bottom: 25px;
 }
 
-.fineprint{
-    font-size: xx-small;
-    font-style: italic;
-}
-
-#spacer{
-min-height: 200px;
-position:fixed;
+@media(min-width: 768px) {
+  .content-section {
+    margin-bottom: 65px;
+  }
 }
 
 .main-section.right {
@@ -27,10 +17,6 @@ position:fixed;
     position: fixed;
     left: auto;
     width: 60%;
-  }
-
-  .bottombuffer{
-    margin-bottom: 80px;
   }
 
   .main-section.right {
