--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1059,7 +1059,7 @@ body {
   font-family: "Tofino", "Helvetica Neue", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 1.42857;
-  color: #333333;
+  color: #404040;
   background-color: #fff; }
 
 input,
@@ -1114,7 +1114,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #eeeeee; }
+  border-top: 1px solid #e5e5e5; }
 
 .sr-only {
   position: absolute;
@@ -1159,7 +1159,7 @@ h1, h2, h3, h4, h5, h6,
   .h6 .small {
     font-weight: normal;
     line-height: 1;
-    color: #777777; }
+    color: #b2b2b2; }
 
 h1, .h1,
 h2, .h2,
@@ -1257,7 +1257,7 @@ mark,
   text-transform: capitalize; }
 
 .text-muted {
-  color: #777777; }
+  color: #b2b2b2; }
 
 .text-primary {
   color: #0050a0; }
@@ -1335,7 +1335,7 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eeeeee; }
+  border-bottom: 1px solid #e5e5e5; }
 
 ul,
 ol {
@@ -1396,7 +1396,7 @@ dd {
 abbr[title],
 abbr[data-original-title] {
   cursor: help;
-  border-bottom: 1px dotted #777777; }
+  border-bottom: 1px dotted #b2b2b2; }
 
 .initialism {
   font-size: 90%; }
@@ -1405,7 +1405,7 @@ blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
   font-size: 17.5px;
-  border-left: 5px solid #eeeeee; }
+  border-left: 5px solid #e5e5e5; }
   blockquote p:last-child,
   blockquote ul:last-child,
   blockquote ol:last-child {
@@ -1416,7 +1416,7 @@ blockquote {
     display: block;
     font-size: 80%;
     line-height: 1.42857;
-    color: #777777; }
+    color: #b2b2b2; }
     blockquote footer:before,
     blockquote small:before,
     blockquote .small:before {
@@ -1426,7 +1426,7 @@ blockquote {
 blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
-  border-right: 5px solid #eeeeee;
+  border-right: 5px solid #e5e5e5;
   border-left: 0;
   text-align: right; }
   .blockquote-reverse footer:before,
@@ -1483,7 +1483,7 @@ pre {
   line-height: 1.42857;
   word-break: break-all;
   word-wrap: break-word;
-  color: #333333;
+  color: #404040;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px; }
@@ -2025,7 +2025,7 @@ table {
 caption {
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #777777;
+  color: #b2b2b2;
   text-align: left; }
 
 th {
@@ -2257,7 +2257,7 @@ legend {
   margin-bottom: 20px;
   font-size: 21px;
   line-height: inherit;
-  color: #333333;
+  color: #404040;
   border: 0;
   border-bottom: 1px solid #e5e5e5; }
 
@@ -2300,7 +2300,7 @@ output {
   padding-top: 7px;
   font-size: 14px;
   line-height: 1.42857;
-  color: #555555; }
+  color: #808080; }
 
 .form-control {
   display: block;
@@ -2309,7 +2309,7 @@ output {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857;
-  color: #555555;
+  color: #808080;
   background-color: #fff;
   background-image: none;
   border: 1px solid #ccc;
@@ -2336,7 +2336,7 @@ output {
     background-color: transparent; }
   .form-control[disabled], .form-control[readonly],
   fieldset[disabled] .form-control {
-    background-color: #eeeeee;
+    background-color: #e5e5e5;
     opacity: 1; }
   .form-control[disabled],
   fieldset[disabled] .form-control {
@@ -2704,7 +2704,7 @@ select[multiple].input-lg,
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #737373; }
+  color: gray; }
 
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -3067,7 +3067,7 @@ fieldset[disabled] a.btn {
   .btn-link[disabled]:hover, .btn-link[disabled]:focus,
   fieldset[disabled] .btn-link:hover,
   fieldset[disabled] .btn-link:focus {
-    color: #777777;
+    color: #b2b2b2;
     text-decoration: none; }
 
 .btn-lg, .btn-group-lg > .btn {
@@ -3182,12 +3182,12 @@ tbody.collapse.in {
     clear: both;
     font-weight: normal;
     line-height: 1.42857;
-    color: #333333;
+    color: #404040;
     white-space: nowrap; }
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   text-decoration: none;
-  color: #262626;
+  color: #333333;
   background-color: #f5f5f5; }
 
 .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
@@ -3197,7 +3197,7 @@ tbody.collapse.in {
   background-color: #0050a0; }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
-  color: #777777; }
+  color: #b2b2b2; }
 
 .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
   text-decoration: none;
@@ -3225,7 +3225,7 @@ tbody.collapse.in {
   padding: 3px 20px;
   font-size: 12px;
   line-height: 1.42857;
-  color: #777777;
+  color: #b2b2b2;
   white-space: nowrap; }
 
 .dropdown-backdrop {
@@ -3469,9 +3469,9 @@ tbody.collapse.in {
   font-size: 14px;
   font-weight: normal;
   line-height: 1;
-  color: #555555;
+  color: #808080;
   text-align: center;
-  background-color: #eeeeee;
+  background-color: #e5e5e5;
   border: 1px solid #ccc;
   border-radius: 4px; }
   .input-group-addon.input-sm,
@@ -3552,16 +3552,16 @@ tbody.collapse.in {
       padding: 10px 15px; }
       .nav > li > a:hover, .nav > li > a:focus {
         text-decoration: none;
-        background-color: #eeeeee; }
+        background-color: #e5e5e5; }
     .nav > li.disabled > a {
-      color: #777777; }
+      color: #b2b2b2; }
       .nav > li.disabled > a:hover, .nav > li.disabled > a:focus {
-        color: #777777;
+        color: #b2b2b2;
         text-decoration: none;
         background-color: transparent;
         cursor: not-allowed; }
   .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
-    background-color: #eeeeee;
+    background-color: #e5e5e5;
     border-color: #0050a0; }
   .nav .nav-divider {
     height: 1px;
@@ -3582,9 +3582,9 @@ tbody.collapse.in {
       border: 1px solid transparent;
       border-radius: 4px 4px 0 0; }
       .nav-tabs > li > a:hover {
-        border-color: #eeeeee #eeeeee #ddd; }
+        border-color: #e5e5e5 #e5e5e5 #ddd; }
     .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-      color: #555555;
+      color: #808080;
       background-color: #fff;
       border: 1px solid #ddd;
       border-bottom-color: transparent;
@@ -3995,14 +3995,14 @@ tbody.collapse.in {
   background-color: #222;
   border-color: #090909; }
   .navbar-inverse .navbar-brand {
-    color: #9d9d9d; }
+    color: #d8d8d8; }
     .navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
       color: #fff;
       background-color: transparent; }
   .navbar-inverse .navbar-text {
-    color: #9d9d9d; }
+    color: #d8d8d8; }
   .navbar-inverse .navbar-nav > li > a {
-    color: #9d9d9d; }
+    color: #d8d8d8; }
     .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
       color: #fff;
       background-color: transparent; }
@@ -4030,7 +4030,7 @@ tbody.collapse.in {
     .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
       background-color: #090909; }
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
-      color: #9d9d9d; }
+      color: #d8d8d8; }
       .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #fff;
         background-color: transparent; }
@@ -4041,11 +4041,11 @@ tbody.collapse.in {
       color: #444;
       background-color: transparent; } }
   .navbar-inverse .navbar-link {
-    color: #9d9d9d; }
+    color: #d8d8d8; }
     .navbar-inverse .navbar-link:hover {
       color: #fff; }
   .navbar-inverse .btn-link {
-    color: #9d9d9d; }
+    color: #d8d8d8; }
     .navbar-inverse .btn-link:hover, .navbar-inverse .btn-link:focus {
       color: #fff; }
     .navbar-inverse .btn-link[disabled]:hover, .navbar-inverse .btn-link[disabled]:focus,
@@ -4066,7 +4066,7 @@ tbody.collapse.in {
       padding: 0 5px;
       color: #ccc; }
   .breadcrumb > .active {
-    color: #777777; }
+    color: #b2b2b2; }
 
 .pagination {
   display: inline-block;
@@ -4100,7 +4100,7 @@ tbody.collapse.in {
   .pagination > li > span:focus {
     z-index: 2;
     color: #002a54;
-    background-color: #eeeeee;
+    background-color: #e5e5e5;
     border-color: #ddd; }
   .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
   .pagination > .active > span,
@@ -4117,7 +4117,7 @@ tbody.collapse.in {
   .pagination > .disabled > a,
   .pagination > .disabled > a:hover,
   .pagination > .disabled > a:focus {
-    color: #777777;
+    color: #b2b2b2;
     background-color: #fff;
     border-color: #ddd;
     cursor: not-allowed; }
@@ -4176,7 +4176,7 @@ tbody.collapse.in {
     .pager li > a:hover,
     .pager li > a:focus {
       text-decoration: none;
-      background-color: #eeeeee; }
+      background-color: #e5e5e5; }
   .pager .next > a,
   .pager .next > span {
     float: right; }
@@ -4187,7 +4187,7 @@ tbody.collapse.in {
   .pager .disabled > a:hover,
   .pager .disabled > a:focus,
   .pager .disabled > span {
-    color: #777777;
+    color: #b2b2b2;
     background-color: #fff;
     cursor: not-allowed; }
 
@@ -4214,9 +4214,9 @@ a.label:hover, a.label:focus {
   cursor: pointer; }
 
 .label-default {
-  background-color: #777777; }
+  background-color: #b2b2b2; }
   .label-default[href]:hover, .label-default[href]:focus {
-    background-color: #5e5e5e; }
+    background-color: #999999; }
 
 .label-primary {
   background-color: #0050a0; }
@@ -4254,7 +4254,7 @@ a.label:hover, a.label:focus {
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
-  background-color: #777777;
+  background-color: #b2b2b2;
   border-radius: 10px; }
   .badge:empty {
     display: none; }
@@ -4286,7 +4286,7 @@ a.badge:hover, a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #eeeeee; }
+  background-color: #e5e5e5; }
   .jumbotron h1,
   .jumbotron .h1 {
     color: inherit; }
@@ -4295,7 +4295,7 @@ a.badge:hover, a.badge:focus {
     font-size: 21px;
     font-weight: 200; }
   .jumbotron > hr {
-    border-top-color: #d5d5d5; }
+    border-top-color: #cccccc; }
   .container .jumbotron,
   .container-fluid .jumbotron {
     border-radius: 6px;
@@ -4335,7 +4335,7 @@ a.badge:hover, a.badge:focus {
     margin-right: auto; }
   .thumbnail .caption {
     padding: 9px;
-    color: #333333; }
+    color: #404040; }
 
 a.thumbnail:hover,
 a.thumbnail:focus,
@@ -4564,13 +4564,13 @@ button.list-group-item {
   text-align: left; }
 
 .list-group-item.disabled, .list-group-item.disabled:hover, .list-group-item.disabled:focus {
-  background-color: #eeeeee;
-  color: #777777;
+  background-color: #e5e5e5;
+  color: #b2b2b2;
   cursor: not-allowed; }
   .list-group-item.disabled .list-group-item-heading, .list-group-item.disabled:hover .list-group-item-heading, .list-group-item.disabled:focus .list-group-item-heading {
     color: inherit; }
   .list-group-item.disabled .list-group-item-text, .list-group-item.disabled:hover .list-group-item-text, .list-group-item.disabled:focus .list-group-item-text {
-    color: #777777; }
+    color: #b2b2b2; }
 
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
@@ -4909,14 +4909,14 @@ button.list-group-item-danger {
 .panel-default {
   border-color: #ddd; }
   .panel-default > .panel-heading {
-    color: #333333;
+    color: #404040;
     background-color: #f5f5f5;
     border-color: #ddd; }
     .panel-default > .panel-heading + .panel-collapse > .panel-body {
       border-top-color: #ddd; }
     .panel-default > .panel-heading .badge {
       color: #f5f5f5;
-      background-color: #333333; }
+      background-color: #404040; }
   .panel-default > .panel-footer + .panel-collapse > .panel-body {
     border-bottom-color: #ddd; }
 
@@ -5839,16 +5839,37 @@ button.close {
   font-weight: 700;
   font-style: normal; }
 
+@font-face {
+  font-family: 'SharpUnity';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/SharpUnity/SharpUnity-Book.ttf") format("truetype"), url("../fonts/SharpUnity/SharpUnity-Book.woff") format("woff"), url("../fonts/SharpUnity/SharpUnity-Book.woff2") format("woff2"); }
+
+@font-face {
+  font-family: 'SharpUnity';
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/SharpUnity/SharpUnity-Semibold.ttf") format("truetype"), url("../fonts/SharpUnity/SharpUnity-Semibold.woff") format("woff"), url("../fonts/SharpUnity/SharpUnity-Semibold.woff2") format("woff2"); }
+
 .section-header {
   display: inline-block;
   font-weight: bold;
   margin: 0 0 10px 0;
   padding: 0 0 5px 0;
-  color: #777777;
+  color: #b2b2b2;
   text-transform: uppercase; }
 
 .callout {
   margin: 0 0 30px; }
+
+.remove-rhythm {
+  margin: 0; }
+
+.text-light {
+  color: #fff; }
+
+.text-muted {
+  color: #808080; }
 
 .logo {
   margin: 0 auto 5px; }
@@ -5951,12 +5972,74 @@ button.close {
   .footer {
     left: 30%; } }
 
+.img-keycap {
+  height: 50px;
+  width: auto; }
+
+.bg-light {
+  background: #fafafa; }
+
+.hero {
+  padding: 15px 0; }
+  @media (min-width: 768px) {
+    .hero {
+      padding: 45px 0; } }
+
+.projects header {
+  background: #0050a0;
+  box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);
+  padding: 20px 0; }
+
+.projects .projects-grid {
+  padding: 25px 0; }
+
+hr {
+  border-color: #e5e5e5; }
+
+.hr-decorative {
+  margin: 0; }
+
+.hr-stubby {
+  margin: 1.5em 0;
+  max-width: 100px; }
+
+.card {
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+  margin: 0 0 2em; }
+
+.project-card-image {
+  background-image: url("http://placekitten.com/350/200/");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 200px; }
+
+.project-card-body {
+  padding: 10px; }
+
+.project-card-link-list {
+  display: inline-block;
+  margin: 0;
+  width: auto; }
+
+.project-card-link-list li {
+  border-left: 1px solid #e5e5e5;
+  padding: 10px 15px; }
+
+.project-card-link-list li a {
+  color: #808080;
+  transition: color .2s ease-out; }
+  .project-card-link-list li a:hover {
+    color: #404040; }
+
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility; }
 
-body, html {
+body,
+html {
   height: 100%;
   width: 100%; }
