--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@ $gray:         #808080;
 $gray-light:   #b2b2b2;
 $gray-lighter: #e5e5e5;
 $gray-lightest: #fafafa;
+$text-muted: $gray;
 
 
 $left-panel-width-sm: 40%;
