--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1257,7 +1257,7 @@ mark,
   text-transform: capitalize; }
 
 .text-muted {
-  color: #b2b2b2; }
+  color: #808080; }
 
 .text-primary {
   color: #0050a0; }
@@ -2025,7 +2025,7 @@ table {
 caption {
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #b2b2b2;
+  color: #808080;
   text-align: left; }
 
 th {
@@ -5868,9 +5868,6 @@ button.close {
 .text-light {
   color: #fff; }
 
-.text-muted {
-  color: #808080; }
-
 .logo {
   margin: 0 auto 5px; }
 
@@ -6032,6 +6029,14 @@ hr {
   transition: color .2s ease-out; }
   .project-card-link-list li a:hover {
     color: #404040; }
+
+.project-tech-stack li {
+  font-size: 12px;
+  text-transform: uppercase; }
+  .project-tech-stack li:not(:last-of-type):after {
+    content: '\00B7';
+    left: 6px;
+    position: relative; }
 
 * {
   box-sizing: border-box;
